--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
         "test:watch": "nyc mocha -w test/**/*-test.js",
         "lint": "./node_modules/.bin/eslint src",
         "lint-fixup": "./node_modules/.bin/eslint src --ext .js,.jsx --fix",
-        "postbuild": "npm run build",
+        "postbuild": "npm run build"
     },
     "repository": {
         "type": "git",
